<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
        <!--android:orderInCategory="100" app:showAsAction="never" />-->
    <item android:id="@+id/action_contact" android:title="@string/action_contact"
        app:showAsAction="never" android:orderInCategory="90" />
    <item android:id="@+id/action_about" android:title="@string/action_about"
        app:showAsAction="never" android:orderInCategory="100" />
    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
        android:icon="@drawable/ic_menu_refresh" app:showAsAction="always" />
</menu>
